infra/app-deploy-networking/method-2-tls/gatewayResource-actuator.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-product-svc-actuator-ig
spec:
  selector:
    istio: ingressgateway # use istio default controller (k get svc istio-ingressgateway -n istio-system --show-labels | grep -i "istio=")
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "actuator-api.mycompany.com"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: api-mycompany-credential
    hosts:
    - "actuator-api.mycompany.com"
