infra/app-deploy-networking/method-2-tls/virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-product-svc-vs
spec:
  hosts:
  - "*"
  gateways:
  - demo-product-svc-ig
  #- mesh
  http:
  - match:
    - uri:
        prefix: /v1/products
        # open with issue with regex rewrite https://github.com/istio/istio/issues/22290
        #regex: "(/pr[0-9]+)?/v1/products(/.*)?" 
      method: 
        exact: GET
    - uri:
        prefix: /v1/products
      method: 
        exact: POST
    - uri:
        prefix: /v1/products
      method: 
        exact: PUT
    - uri:
        prefix: /v1/products
      method: 
        exact: DELETE
    rewrite:
      uri: /v1/products
    corsPolicy:
      allowOrigins:
      - regex: 'http://*.company.com'
      allowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
      allowCredentials: false
      allowHeaders:
      - Authorization
      - Content-Type
      maxAge: "24h" 
    route:
    - destination:
        host: demo-product-svc.default.svc.cluster.local
        port:
          number: 8080                      
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: connect-failure,refused-stream,503
